--- a/finish/build.gradle
+++ b/finish/build.gradle
@@ -64,14 +64,14 @@ dependencies {
     // Default imports for Kotlin and Jetpack
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'org.tensorflow:tensorflow-lite-support:0.4.3'
-    implementation 'org.tensorflow:tensorflow-lite-metadata:0.4.3'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.0.0-nightly'
 
     // Import for CameraX
-    def camerax_version = "1.2.0"
+    def camerax_version = "1.2.1"
     // CameraX core library using camera2 implementation
     implementation "androidx.camera:camera-camera2:$camerax_version"
     // CameraX Lifecycle Library
@@ -81,8 +81,8 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.6.1"
 
     // TODO 5: Optional GPU Delegates
-    implementation 'org.tensorflow:tensorflow-lite:2.11.0'
-    implementation 'org.tensorflow:tensorflow-lite-gpu:2.11.0'
+    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
